2006-08-20  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * po/olive-gtk.pot: generated new .pot file
    * olive/frontend/gtk/bookmark.py: implemented Edit bookmark dialog
    * cmenu.ui: added Edit item to left context menu
    * olive.glade: added Edit bookmark dialog
    * olive/frontend/gtk/__init__.py: added support for bookmark titles
    * olive/frontend/gtk/__init__.py: proper handling of permission denied cases
    * olive/backend/info.py: handle permission denied exception in is_branch()
    * olive/backend/fileops.py: handle permission denied exception in status()
    * olive/backend/errors.py: added PermissionDenied exception
    * po/hu.po: added Hungarian traslation
    * Added gettext support to all files.
    * genpot.sh: added olive-gtk.pot generator script

2006-08-19  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/handler.py: fixed a long existing bug: double-clicking a
      file should open it with an application (supported under Windows)
    * olive/frontend/__init__.py: set menu and toolbar sensitivity
    * olive/frontend/handler.py: set context menu sensitivity
    * olive/backend/info.py: implemented is_branch()
    * olive/frontend/gtk/__init__.py: applied Diff toolbutton menu
    * olive/frontend/gtk/menu.py: implemented the Diff toolbutton menu
    * cmenu.ui: added Diff toolbutton menu; removed Log from right context menu
    * olive.glade: swapped Diff and Log toolbuttons; coverted log button to an
      ordinary GtkToolButton
    * olive/frontend/gtk/__init__.py: added win32 compatibility
    * olive/frontend/gtk/menu.py: added win32 compatibility
    * olive/frontend/gtk/branch.py: fixed a typo

2006-08-15  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/menu.py: upgraded according to the OliveDialog API
      changes; HIGify; load proper icons
    * olive.glade: Close button should be the default on the Informations window
    * olive.glade: added View menu