@@ -1,5 +1,8 @@
 2006-08-20  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
 
+    * po/olive-gtk.pot: regenerated
+    * olive/frontend/gtk/push.py: added basic test functionality
+    * olive.glade: added test related widgets to the Push dialog
     * po/olive-gtk.pot: generated new .pot file
     * olive/frontend/gtk/bookmark.py: implemented Edit bookmark dialog
     * cmenu.ui: added Edit item to left context menu
